// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`episode-page should render correctly episode-page if episodes are available 1`] = `
<div
  class="episode"
>
  <a
    class="back-link"
    href="#/"
  >
    BACK
  </a>
  <div
    class="episode-card"
  >
    <p>
      Season 1. Episode 1
    </p>
    <h1
      class="episode-card__heading"
    >
      Escape from Monster Island
    </h1>
    <div
      class="episode-card__container"
    >
      <img
        alt="Escape from Monster Island"
        class="episode-card__image"
        src="http://static.tvmaze.com/uploads/images/medium_landscape/53/132617.jpg"
      />
      <div>
        <p>
          Bubbles wins two tickets to a concert and has to pick between Blossom and Buttercup to go with her. Meanwhile, the Mayor's plane goes down over Monster Island and it's up to the girls to rescue him.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`episode-page should render error if there was an error with episode fetching 1`] = `
<div
  class="episode"
>
  <a
    class="back-link"
    href="#/"
  >
    BACK
  </a>
  <div
    class="error"
  >
    Sorry, some error occurred while preparing the response for episode description
  </div>
</div>
`;
